--- a/src/pages/CreateClub/CreateClub.module.css
+++ b/src/pages/CreateClub/CreateClub.module.css
@@ -5,17 +5,11 @@
   margin-bottom: 10px;
 }
 
-.createCity {
+.createClub {
   background-color: white;
   width: 80%;
   margin: 0 auto;
   padding-bottom: 15px;
-}
-
-.cityForm {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
 }
 
 .createButton {
