--- a/src/pages/userPage/personalData/PersonalData.module.css
+++ b/src/pages/userPage/personalData/PersonalData.module.css
@@ -11,6 +11,22 @@
     margin-bottom: 45px;
 }
 
+.spaceWrapper{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: white;
+}
+.loader{
+    position: fixed !important;
+    top: 50%;
+    left: 50%;
+    transform:translateX(-50%) ;
+    
+}
 .content{
     margin-top: 30px;
     display: flex;
@@ -53,7 +69,8 @@
 .tableWrapper{
 /*    width: max-content; */
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+
     justify-content: center;
 }
 
