Added notificationLogic for backend errors

--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -13,7 +13,6 @@
 }
 
 .MyInput{
-    display: block;
     background: #f7f9fc !important;
     border: 0 !important;
     outline: none !important;
@@ -21,9 +20,12 @@
     height: 44px !important;
     border-bottom: 1px solid #dfe7f1 !important;
     width: 100% !important;
+    margin-top:15px;
+    text-align: left;
 }
 
 #confirmButton{
+    margin-top: 15px;
     border: 0;
     color: white;
     background-color: #3c5438;
