--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -20,6 +20,7 @@
     height: 44px !important;
     border-bottom: 1px solid #dfe7f1 !important;
     width: 100% !important;
+    text-align: left;
 }
 
 #confirmButton{
