Added changes in views and fixed problems in App.tsx

--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -45,8 +45,9 @@
     color: #6f7a85;
     opacity: .95;
     cursor: pointer;
-    font-family: "SourceSansPro";
+    font-family: "SourceSansPro"; 
     margin-top: -10px;
+    margin-left:200px;
 }
 
 .GoogleFacebookLogin{
