--- a/src/pages/ResetPassword/ResetPassword.module.css
+++ b/src/pages/ResetPassword/ResetPassword.module.css
@@ -39,3 +39,16 @@
     padding-top: 7px;
     padding-bottom: 32px;
 }
+
+.resetPasswordContainer{
+    background-color: #3c5438;
+    border:0;
+    border-radius: .28rem;
+    color:white;
+    width:100%;
+    font-size: 18px;
+    width:100%;
+    height:40px;
+    margin-bottom: 20px;
+    text-align: center;    
+}
