Fixed date and progress

--- a/src/pages/userPage/EditUserPage/EditUserPage.module.css
+++ b/src/pages/userPage/EditUserPage/EditUserPage.module.css
@@ -94,4 +94,6 @@ input,
 [role="spinbutton"] {
     text-align: start;
 }
->>>>>>> VV-UserProfileConnection
+.confirmBtn:hover{
+    transform: scale(1.07);
+}
