--- a/src/pages/DecisionTable/Table.module.css
+++ b/src/pages/DecisionTable/Table.module.css
@@ -23,3 +23,8 @@
   box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
   position: absolute;
 }
+.submitButtons{
+  width:100%;
+  display:flex;
+   justify-content:space-between
+}
