fix updating club and added spiner when loading, update api

--- a/src/pages/Club/Club.module.css
+++ b/src/pages/Club/Club.module.css
@@ -67,3 +67,9 @@
 .profileImg {
   margin: 0 auto;
 }
+.spiner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
