--- a/src/pages/Clubs/Clubs.module.css
+++ b/src/pages/Clubs/Clubs.module.css
@@ -33,3 +33,9 @@
 .titleText:hover{
   text-decoration: underline;
 }
+.spiner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
