--- a/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
+++ b/src/pages/Actions/ActionEvent/EventCreate/EventCreate.module.css
@@ -37,13 +37,15 @@ form {
     text-align: center;
     width: 150px;
 }
-[type='radio']{
-    margin-right: 7px;
+
+[type='radio'] {
+    margin-right: 20px;
 }
+
 .row {
     display: flex;
     justify-content: space-between;
-    margin: 16px 45px;
+    margin: 0px 45px;
 }
 
 .select:hover,
@@ -56,41 +58,89 @@ input:hover,
 
 .input {
     width: 235px !important;
+    text-align: start;
 }
 
-td,tr {
+td,
+tr {
     padding: 14px;
 }
 
 .select {
     width: 235px !important;
+    text-align: start;
 }
 
 input,
 [role="spinbutton"] {
-    text-align: end;
+    text-align: left;
 }
 
 [role="spinbutton"] {
     margin-left: -20px;
 }
-.button{
+
+.button {
     margin-top: 10px;
     color: white;
     border: none;
-    width: 138px;
+    width: auto;
     height: 40px;
     outline: none;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    margin-left: 416px;
+    margin-left: 235px;
     margin-bottom: 15px;
 }
 
-.button:hover{
+.button:hover {
     border: none;
     outline: none;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.radio {
+    justify-content: center;
+    display: flex;
+}
+
+.title {
+    justify-content: center;
+    display: flex;
+}
+
+.spaceWrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: white;
+}
+
+.loader {
+    position: fixed !important;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@media(max-width:767px) {
+    .actionsWrapper,
+    .card,
+    .background,
+    .radio {
+        width: 100%;
+        flex-direction: column;
+    }
+    .row {
+        width: 100%;
+        flex-direction: column;
+    }
+    .radio {
+        flex-direction: column;
+    }
 }
