--- a/src/pages/Cities/Cities.module.css
+++ b/src/pages/Cities/Cities.module.css
@@ -1,35 +1,46 @@
 .background{
   background-color: rgb(238, 238, 238);
 }
+
 .mainTitle{
   text-align: center;
   font-size: 40px;
   color:#3c5438;
 }
+
 .wrapper{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-.cardStyles:first-child{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.cardStyles:first-child img{
-  margin-top: 10px;
-}
+
 .cardStyles{
   margin: 15px;
   width: 242px;
   height: 221.45px;
 }
+
+.addCity{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.addCity img{
+  margin-top: 15px;
+}
+
 .titleText{
   text-align: center;
   font-size: 20px;
   font-weight: 700;
 }
+
 .titleText:hover{
   text-decoration: underline;
+}
+
+.pagination{
+  text-align: center;
 }
