--- a/src/pages/CreateCity/CreateCity.module.css
+++ b/src/pages/CreateCity/CreateCity.module.css
@@ -6,10 +6,18 @@
 }
 
 .createCity {
-  background-color: white;
   width: 80%;
   margin: 0 auto;
   padding-bottom: 15px;
+}
+
+.container{
+  background-color: white;
+  text-align: center;
+}
+
+.container:nth-child(2){
+  margin-top: 40px;
 }
 
 .cityForm {
@@ -18,6 +26,31 @@
   justify-content: space-around;
 }
 
+.formField {
+  display: flex;
+  flex-direction: column;
+}
+
 .createButton {
   width: 100%
+}
+
+.tablesContainer{
+  width: 90%;
+  margin: 10px auto 20px;
+  padding: 10px 0;
+  overflow: hidden;
+}
+
+.backButton{
+  width: 30%;
+  margin-top: auto;
+  margin-bottom: 20px;
+}
+
+.spiner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
