--- a/src/pages/SignUp/Switcher/Switcher.module.css
+++ b/src/pages/SignUp/Switcher/Switcher.module.css
@@ -163,5 +163,16 @@
     }
 }
 
+@media(max-width: 350px){
+    .loginText{
+        font-size:8px;
+    }
 
+    .registerText{
+        font-size: 8px;
+    }
+    .orSwitcher{
+        font-size:20px;
+    }
+}
 
