--- a/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
+++ b/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
@@ -14,3 +14,25 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.topCalendar {
+    margin: 0 0 3em;
+}
+
+.legend {
+    display: flex;
+    padding: 0 0 10px;
+}
+
+.legendItem {
+    display: flex;
+    align-items: center;
+    padding: 0 20px 0 0;
+}
+
+.legendCircle {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin: 0 0 0 5px
+}
