Revert "As add responcive ui"

--- a/src/pages/ResetPassword/ResetPassword.module.css
+++ b/src/pages/ResetPassword/ResetPassword.module.css
@@ -1,4 +1,4 @@
-.mainContainerReset{
+.mainContainer{
     margin: 40px 0;
     background-color: white;
     width: 590px;
@@ -51,49 +51,4 @@
     height:40px;
     margin-bottom: 20px;
     text-align: center;    
-}
-
-@media(max-width: 700px){
-    .mainContainerReset{
-        width: 520px;
-    }
-    .resetPasswordContainer{
-        font-size: 15px;
-    }
-}
-
-@media(max-width: 600px){
-    .mainContainerReset{
-        width: 450px;
-    }
-    .resetPasswordContainer{
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 480px){
-    .mainContainerReset{
-        width: 380px;
-    }
-    .resetPasswordContainer{
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 410px){
-    .mainContainerReset{
-        width: 350px;
-    }
-}
-
-@media(max-width: 370px){
-    .mainContainerReset{
-        width: 320px;
-    }
-}
-
-@media(max-width: 350px){
-    .mainContainerReset{
-        width: 280px;
-    }
 }
