--- a/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -1,4 +1,4 @@
-.mainContainerForgot{
+.mainContainer{
     margin: 40px 0;
     background-color: white;
     width: 590px;
@@ -51,55 +51,4 @@
     height:40px;
     margin-bottom: 20px;
     text-align: center;    
-}
-
-@media(max-width: 700px){
-    .mainContainerForgot{
-        width: 520px;
-    }
-    .ForgotPasswordInput{
-        height:42px;
-    }
-    .forgotPasswordContainer{
-        font-size: 15px;
-    }
-}
-
-@media(max-width: 600px){
-    .mainContainerForgot{
-        width: 450px;
-    }
-    .ForgotPasswordInput{
-        height:40px;
-    }
-    .forgotPasswordContainer{
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 480px){
-    .mainContainerForgot{
-        width: 380px;
-    }
-    .forgotPasswordContainer{
-        font-size: 14px;
-    }
-}
-
-@media(max-width: 410px){
-    .mainContainerForgot{
-        width: 350px;
-    }
-}
-
-@media(max-width: 370px){
-    .mainContainerForgot{
-        width: 320px;
-    }
-}
-
-@media(max-width: 350px){
-    .mainContainerForgot{
-        width: 280px;
-    }
 }
