--- a/src/pages/City/City.module.css
+++ b/src/pages/City/City.module.css
@@ -11,11 +11,19 @@
   color:#3c5438;
 }
 
-.listIcon {
+.editIcon {
   position: absolute;
   top: 15px;
   left: 20px;
   font-size: 22px;
+  cursor: pointer;
+}
+
+.removeIcon {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  font-size: 20px;
   cursor: pointer;
 }
 
@@ -95,18 +103,18 @@
 
 .userName {
   overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 1;
-   -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .documentText {
   overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 3;
-   -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .flexContainer {
@@ -146,6 +154,7 @@
   text-align: center;
   font-size: 40px;
   color: #3c5438;
+
 }
 
 .wrapper {
@@ -166,9 +175,19 @@
   font-weight: 700;
 }
 
-.spiner{
+.spiner {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.select {
+  width: 100%;
+}
+
+.backButton {
+  width: 180px;
+  background-color: #3c5438;
+  color: white;
 }
