Added responsive to siderbar and header

--- a/src/components/PrivateLayout/PrivateLayout.module.css
+++ b/src/components/PrivateLayout/PrivateLayout.module.css
@@ -6,3 +6,11 @@
 .profilePhoto img {
     max-width: 80px;
 }
+
+.sidebar {
+    position: fixed;
+    height: 100vh;
+    z-index: 200;
+    top: 0;
+    box-shadow: 2px 0 5px 2px #00000066;
+}
