--- a/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
+++ b/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
@@ -14,3 +14,59 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.topCalendar {
+    margin: 0 0 3em;
+}
+
+.legend {
+    display: flex;
+    padding: 0 0 10px;
+}
+
+.legendItem {
+    display: flex;
+    align-items: center;
+    padding: 0 20px 0 0;
+}
+
+.legendCircle {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin: 0 0 0 5px
+}
+
+.button {
+    margin-top: 10px;
+    background: #3C5438;
+    color: white;
+    border: none;
+    width: 138px;
+    height: 40px;
+    outline: none;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-left: 170px;
+}
+
+.button:hover {
+    border: none;
+    outline: none;
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.buttonCansel {
+    width: auto;
+    height: 40px;
+    outline: none;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.eventHover:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
