Added some changes

--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -8,12 +8,12 @@
 .displayFlex{
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
 }
 .approversCard{
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
 
 }
 .cardStyles{
