--- a/src/pages/Actions/ActionEvent/EventEdit/EventEdit.module.css
+++ b/src/pages/Actions/ActionEvent/EventEdit/EventEdit.module.css
@@ -92,6 +92,8 @@ input,
     border-radius: 10px;
     margin-left: 235px;
     margin-bottom: 15px;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .button:hover {
@@ -99,6 +101,7 @@ input,
     outline: none;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .radio {
