--- a/src/pages/Error/Errors.module.css
+++ b/src/pages/Error/Errors.module.css
@@ -10,6 +10,8 @@
     cursor: pointer;
     border-radius: 10px;
     align-items: center;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .button:hover {
@@ -17,4 +19,5 @@
     outline: none;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
     transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
