--- a/src/pages/DecisionTable/FormAddDecision.module.css
+++ b/src/pages/DecisionTable/FormAddDecision.module.css
@@ -16,3 +16,13 @@
   .formField {
     width: 100%;
   }
+
+  .cardButton{
+    float: right;
+    inline-size: -webkit-fill-available;
+    margin-top: 7px;
+    color:#3c5438;
+    border-color: #3c5438;
+    max-width: 320px;
+    min-width: 320px;
+  }
