--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -8,7 +8,7 @@
 .displayFlex{
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    //align-items: flex-end;
 }
 .approversCard{
     display: flex;
@@ -78,11 +78,3 @@
         display: block;
     }
 }
-/* @media(min-width: 500px){
-    .displayFlex{
-        display: block;
-    }
-    .content{
-        margin-left: 0;
-    }
-} */
