--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -35,6 +35,7 @@
 .button {
     margin-top: 10px;
     background: #3C5438;
+    justify-content: center;
     color: white;
     border: none;
     width: 138px;
@@ -63,7 +64,8 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.button:hover {
+.button:hover,
+.buttonCansel:hover {
     border: none;
     outline: none;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
@@ -73,12 +75,18 @@
 
 .buttonCansel {
     width: auto;
+    margin-top: 10px;
+    background: #3C5438;
+    color: white;
+    border: none;
     height: 40px;
     outline: none;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    align-items: center;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .wrapper2,
@@ -170,6 +178,11 @@ h1 {
     font-weight: 600;
     font-size: 21px;
     margin: 10px 0 0 0;
+    display: flex;
+    justify-content: center;
+}
+
+.icon{
     display: flex;
     justify-content: center;
 }
