--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -14,8 +14,8 @@
 }
 
 .wrapperImg {
-    width: 41%;
-    height: 470px;
+    width:  calc(60% - 30px);
+    height: 540px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
@@ -88,7 +88,7 @@
 .wrapper2,
 .wrapper3 {
     width: calc(50% - 30px);
-    height: 200px;
+    height: 250px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
@@ -100,7 +100,7 @@
 .wrapper4,
 .wrapper5 {
     width: calc(50% - 30px);
-    height: 229px;
+    height: 250px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
