--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -33,7 +33,9 @@
     width: max-content;
     align-self: center;
 }
-
+.progress{
+    display: contents;
+}
 .formContainer{
     display: flex;
     width: 100%;
@@ -86,7 +88,6 @@
     font-size: 17px;
     box-shadow: 0 0 0 !important;
     background-color: rgba(210, 210, 210, 0.5);
-    width: 200px;
     display: block;
     text-align: center;
 }
