--- a/src/pages/userPage/Menu/Menu.less
+++ b/src/pages/userPage/Menu/Menu.less
@@ -1,5 +1,5 @@
 .wrapperMenu{
-    width:max-content;
+    width:100%;
     display: contents;
     align-self: center;
 }
@@ -7,6 +7,8 @@
 .menu{
     background-color: rgb(240, 245, 240);
     border-bottom: 1px solid #dee2e6;
+    display: flex;
+    justify-content: center;
 }
 
 
