--- a/src/App.less
+++ b/src/App.less
@@ -17,6 +17,7 @@
  .ant-menu-submenu-active {
    color: wheat;
  }
+
 .ant-form-inline .ant-form-item-with-help{
   margin-bottom: 0;
 }
@@ -35,6 +36,12 @@
     margin: 64px 0 0;
     overflow-y: auto;
     height: calc(100% - 64px);
+  }
+}
+
+.ant-menu-submenu-popup {
+  .ant-menu.ant-menu-sub{
+    background-color:#3c5438;
   }
 }
 
