--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@
     z-index: 300;
     width: 100%;
     box-shadow: 0px 1px 4px 3px #00000021;
+    user-select: none;
 }
 
 .headerMenu {
@@ -25,6 +26,7 @@
 .headerItem,
 .headerDropDownItem {
     border: none !important;
+    user-select: none;
 }
 
 .headerItem:hover,
@@ -68,6 +70,7 @@
     border: none;
     background: inherit;
     color: white;
+    user-select: none;
     font-size: 14px;
 }
 
