--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -102,9 +102,12 @@
 @media(max-width: 768px){
    .avatarWrapper{
        width: 100% !important;
+       padding-top:5px;
+       padding-bottom: 5px;
    }
    .allFields{
        width: 100%;
+       padding: 5px;
    }
    .formItem{
        width: 100%;
@@ -114,6 +117,9 @@
    }
    .formContainer{
         flex-direction: column;
+   }
+   .mainContainer{
+       padding: 10px;
    }
 }
 
