--- a/src/App.less
+++ b/src/App.less
@@ -42,7 +42,16 @@
 .ant-menu-submenu-popup {
   .ant-menu.ant-menu-sub{
     background-color:#3c5438;
+    padding: 5px 5px 10px 15px;
   }
+}
+
+.anticon.anticon-bell{
+  margin: 0;
+} 
+
+.ant-progress{
+  margin: auto;
 }
 
 ::-webkit-scrollbar {
