--- a/src/pages/Club/CreateClub/CreateClub.module.css
+++ b/src/pages/Club/CreateClub/CreateClub.module.css
@@ -15,3 +15,10 @@
 .createButton {
   width: 100%
 }
+
+.spiner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
