BR: Add basic event estimation

--- a/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventInfo.less
@@ -52,6 +52,16 @@
     }
   }
 
+  .rateFlex{
+    .iconsFlexBase();
+    border-radius: 6px;
+    border-color: black !important;
+    box-shadow: 0 0 0 !important;
+    background-color: rgba(210, 210, 210, 0.5);
+    margin-top: 7px;
+    padding-bottom: 6px;
+  }
+
 .icon {
   @media(max-width: 300px){
     font-size: 25px !important;
