--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -82,6 +82,13 @@
     
 }
 
+.line {
+    background: #3C5438;
+    width: 100%;
+    height: 10px;
+    margin-bottom: 5px;
+}
+
 @media(max-width:767px){
     .displayFlex{
         flex-direction: column;
@@ -89,6 +96,7 @@
     .approversContent{
         width: 100%;
         flex-direction: column;
+        text-align: center;
     }
 }
 // @media(max-width: 1174px){
