--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -84,7 +84,7 @@
     display: flex;
     align-self: center;
     flex-direction: column;
-    padding: 0 40px;
+    padding: 0 40px 10px;
     background-color: rgb(240, 245, 240);
 }
 
@@ -97,6 +97,13 @@
     background-color: rgba(210, 210, 210, 0.5);
     display: block;
     text-align: center;
+}
+
+.line {
+    background: #3C5438;
+    width: 100%;
+    height: 10px;
+    margin-bottom: 5px;
 }
 
 @media(max-width: 768px){
