--- a/src/pages/Club/Clubs/Clubs.module.css
+++ b/src/pages/Club/Clubs/Clubs.module.css
@@ -39,3 +39,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.cardCoverStyles{
+  object-fit: contain;
+  width: 242px;
+  height: 154.45px;
+}
