--- a/src/pages/userPage/Menu/Menu.less
+++ b/src/pages/userPage/Menu/Menu.less
@@ -5,7 +5,7 @@
 }
 
 .menu{
-    background-color: rgb(240, 245, 240);
+    background-color: rgb(240, 245, 240)!important;
     border-bottom: 1px solid #dee2e6;
     display: flex;
     justify-content: center;
