--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
 }
 
 .wrapperCol {
@@ -93,7 +93,7 @@
 
 .wrapper2,
 .wrapper3 {
-    width: calc(100% - 10px);
+    width: 400px;
     height: 250px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
@@ -102,7 +102,16 @@
     text-align: center;
     padding-top: 20px;
 }
-
+.wrapperPlastDegree{
+    width: 900px;
+    height: 250px;
+    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
+    display: flex;
+    flex-direction: column;
+    align-items: normal;
+    text-align: center;
+    padding-top: 20px;
+}
 .wrapper4,
 .wrapper5 {
     width: calc(50% - 30px);
@@ -119,6 +128,7 @@
 .wrapper3:hover,
 .wrapper4:hover,
 .wrapper5:hover,
+.wrapperPlastDegree:hover,
 .wrapperImg:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -127,6 +137,7 @@
 .wrapper3,
 .wrapper4,
 .wrapper5,
+.wrapperPlastDegree,
 .wrapperImg {
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
@@ -135,6 +146,7 @@
 .wrapper2,
 .wrapper3,
 .wrapper4,
+.wrapperPlastDegree,
 .wrapper5 {
     margin: 0px 0px 20px 20px;
 }
@@ -143,21 +155,7 @@
     text-align: center;
     align-self: center;
 }
-.wrapperPlastDegree{
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    margin: 0px 0px 20px 20px;
-    text-align: left;
-    align-self: center;
-    width: 800px;
-    height: 250px;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
-    display: flex;
-    flex-direction: column;
-    align-items: normal;
-    text-align: left;
-    padding-top: 20px;
-}
+
 #button {
     align-items: center;
     margin: 10px auto;
