--- a/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
+++ b/src/pages/Actions/ActionEvent/EventInfo/EventDetails.less
@@ -1,5 +1,4 @@
 .generalLabel {
-  border-radius: 6px;
   border: 0 !important;
   padding: 5px 0 5px 7px;
   box-shadow: 0 0 0 !important;
@@ -16,6 +15,20 @@
   width: 275px;
   font-size: 17px;
   text-align: center;
+}
+
+.descriptions{
+  padding: 10px 0px 10px 10px;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.descriptions:hover{
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .dataDescription {
