--- a/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -1,15 +1,20 @@
 .mainContainerForgot{
     margin: 40px 0;
     background-color: white;
-    width: 590px;
-    height: auto;
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,.1);
     padding: 20px 40px;
     margin: auto;
     vertical-align: middle;
     margin-top: 45px;
+    width: 500px;
+    height: 250px;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
 }
 
 .ForgotPasswordInput{
@@ -23,6 +28,7 @@
     text-align: left;
 }
 
+
 #confirmButton{
     margin-top: 15px;
     border: 0;
@@ -31,7 +37,6 @@
     width: 100%;
     font-weight: 400;
     line-height: 1.5;
-    border-radius: .28rem;
     font-size: 1rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     outline: none;
