--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -1,15 +1,15 @@
 .mainContainerSignUp{
+    align-self: center;
     margin: 40px 0;
     background-color: white;
     width: 590px;
     height: auto;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,.1);
     padding: 20px 40px;
-    margin: auto;
-    vertical-align: middle;
     margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
 .MyInput{
